PyMaker/datas/object2/RawHTML/i10701/Python_DOC_referPages.error-reading-csv-file-unicodeescape.txt
<div class="post-text" itemprop="text">
<p>I have this program</p>
<pre><code>import csv

with open("C:\Users\frederic\Desktop\WinPython-64bit-3.4.4.3Qt5\notebooks\scores.txt","r") as scoreFile:
    # write = w, read = r, append = a
    scoreFileReader = csv.reader(scoreFile)
    scoreList = []
    for row in scoreFileReader:
        if len (row) != 0:
            scoreList = scoreList + [row]

scoreFile.close()

print(scoreList)
</code></pre>
<hr/>
<p><strong>Why do I get this Error ?</strong></p>
<blockquote>
<p>with
  open("C:\Users\frederic\Desktop\WinPython-64bit-3.4.4.3Qt5\notebooks\scores.txt","r")
  as scoreFile:
               ^ SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape.</p>
</blockquote>
</div>
<div class="post-text" itemprop="text">
<p>You need to use raw strings with Windows-style filenames:</p>
<pre><code>with open(r"C:\Users\frederic\Desktop\WinPython-64bit-3.4.4.3Qt5\notebooks\scores.txt", 'r') as scoreFile:
         ^^
</code></pre>
<p>Otherwise, Python's string engine thinks that \U is the start of a Unicode escape sequence - which of course it isn't in this case.</p>
<hr/>
<p>Also, be careful also your <code>scoreFile.close()</code> is useless: </p>
<p>The <a href="https://docs.python.org/3/reference/compound_stmts.html#with" rel="nofollow"><code>with</code></a> statement replace a try and catch. It also
   automatically close the file after the block. That mean you can delete the <code>scoreFile.close()</code> line.</p>
<p>Also, you can change the line <code>if len(row) != 0</code>
According to <a href="https://www.python.org/dev/peps/pep-0008/" rel="nofollow">PEP8</a>:</p>
<blockquote>
<p>For sequences, (strings, lists, tuples), use the fact that empty
  sequences are false.</p>
<p>Yes: if not seq:
       if seq:</p>
<p>No: if len(seq):
      if not len(seq):</p>
</blockquote>
<p>One last thing, your <code>for loop</code> isn't good either, to read <code>csv</code> you better start copying an example from the <a href="https://docs.python.org/2/library/csv.html#module-contents" rel="nofollow">doc</a> first!</p>
<pre><code>with open('eggs.csv', 'rb') as csvfile:
    spamreader = csv.reader(csvfile, delimiter=' ', quotechar='|')
    for row in spamreader:
       print ', '.join(row)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>you may try this:</p>
<pre><code>import csv
import io

def guess_encoding(csv_file):
    """guess the encoding of the given file"""
    with io.open(csv_file, "rb") as f:
        data = f.read(5)
    if data.startswith(b"\xEF\xBB\xBF"):  # UTF-8 with a "BOM"
        return ["utf-8-sig"]
    elif data.startswith(b"\xFF\xFE") or data.startswith(b"\xFE\xFF"):
        return ["utf-16"]
    else:  # in Windows, guessing utf-8 doesn't work, so we have to try
        try:
            with io.open(csv_file, encoding="utf-8") as f:
                preview = f.read(222222)
                return ["utf-8"]
        except:
            return [locale.getdefaultlocale()[1], "utf-8"]

encodings = guess_encoding(r"C:\Users\frederic\Desktop\WinPython-64bit-3.4.4.3Qt5\notebooks\scores.txt")[0])

# then your code with 
with open(r"C:\Users\frederic\Desktop\WinPython-64bit-3.4.4.3Qt5\notebooks\scores.txt","r", encoding=encodings[0]) as scoreFile:
</code></pre>
</div>
<span class="comment-copy">Possible duplicate of <a href="http://stackoverflow.com/questions/18276283/python-open-file-unicode-error">Python open file unicode error</a></span>
